corrected overflow element

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -30,6 +30,8 @@
     @media screen and (max-width: 767px) {
         .content {
             width: 100% !important;
+            padding-left: 15px;
+            padding-right: 15px;
             h1 {
                 text-align: left !important;
                 font-size: 40px !important;
